# hackweek

./: .gitignore  LICENSE  README.md
common/: Base.hpp  ErrorReporting.hpp
robocom/: CMakeLists.txt
robocom/arduino/: CMakeLists.txt  Encoder.hpp  Gyro.hpp  LogoCommands.hpp  Motor.hpp  RobotServer.hpp  Servo.hpp  ServoCtl.hpp  arduino_base.hpp  arduino_fwds.hpp
robocom/arduino/impl/: Encoder.cpp  Gyro.cpp  LogoMove.cpp  LogoPen.cpp  LogoTurn.cpp  Motor.cpp  RobotServer.cpp  Servo.cpp  ServoCtl.cpp  main.cpp
robocom/client/: CMakeLists.txt  Handle.cpp  Handle.hpp  SerialPort.cpp  SerialPort.hpp  client_base.hpp  client_fwds.hpp
robocom/client/impl/: Handle.cpp  SerialPort.cpp
robocom/client/test/: CMakeLists.txt  SerialPortTester.cpp  main.cpp
robocom/client/test/arduino/: CMakeLists.txt  test.cpp
robocom/dropbox/: gui.py  robocom.py
robocom/samples/: CMakeLists.txt  first.cpp
robocom/shared/: CMakeLists.txt  Message.hpp  MessageIO.hpp  MessageListNode.hpp  MessagePool.hpp  MessageQueue.hpp  Server.hpp  StreamIO.hpp  shared_base.hpp  shared_fwds.hpp
robocom/shared/impl/: Message.cpp  MessageIO.cpp  MessagePool.cpp  MessageQueue.cpp  Server.cpp
robocom/shared/msg/: EncoderReadingNotice.hpp  EncoderReadingRequest.hpp  FlushResponse.hpp  GyroReadingNotice.hpp  GyroReadingRequest.hpp  LogoCompleteNotice.hpp  LogoMoveRequest.hpp  LogoPenRequest.hpp  LogoTurnRequest.hpp  MessageStatus.hpp  MessageTypes.hpp  SetServoAngleRequest.hpp  SetWheelDriveRequest.hpp  SimpleMessage.hxx  WheelDriveChangedNotice.hpp  msg_base.hpp  msg_fwds.hpp
robocom/shared/msg/impl/: EncoderReadingNotice.cpp  EncoderReadingRequest.cpp  FlushResponse.cpp  GyroReadingNotice.cpp  GyroReadingRequest.cpp  LogoCompleteNotice.cpp  LogoMoveRequest.cpp  LogoPenRequest.cpp  LogoTurnRequest.cpp  SetServoAngleRequest.cpp  SetWheelDriveRequest.cpp  WheelDriveChangedNotice.cpp
robocom/shared/test/: CMakeLists.txt  MessagePoolTester.cpp  MessageQueueTester.cpp  MessageTester.cpp
sandbox/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
sandbox/cmaketest/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
sandbox/foxtest/: CMakeLists.txt
